# dingo-sdk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
python/: CMakeLists.txt  DEVELOP.md  README.md  __init__.py  dingosdk.swg  setup.py
python/examples/: pysdk_rawkv_example.py  pysdk_vector_diskann_example.py  pysdk_vector_example.py
python/src/: client_bindings.cc  client_bindings.h  document_bindings.cc  document_bindings.h  document_index_bindings.cc  document_index_bindings.h  status_bindings.cc  status_bindings.h  types_bindings.cc  types_bindings.h  vector_bindings.cc  vector_bindings.h  vector_index_bindings.cc  vector_index_bindings.h  wrapper.cc
src/benchmark/: CMakeLists.txt  benchmark.cc  benchmark.h  dataset.cc  dataset.h  dataset_util.cc  main.cc  operation.cc  operation.h  synchronization.cc  synchronization.h  threadpool.cc  threadpool.h  util.h  uuid.cc  uuid.h
src/benchmark/tools/hdf5ToJson/: HDF5ToJson.py  README.md  (+2 more)
src/example/: CMakeLists.txt  sdk_document_example.cc  sdk_document_regex_example.cc  sdk_rawkv_example.cc  sdk_transaction_example.cc  sdk_transaction_gc_example.cc  sdk_transaction_gc_op_all_and_lock_example.cc  sdk_vector_binary_example.cc  sdk_vector_diskann_example.cc  sdk_vector_example.cc  txn_scan_test.cc
src/sdk/: CMakeLists.txt  admin_tool.cc  admin_tool.h  auto_increment_manager.cc  auto_increment_manager.h  client.cc  client.h  client_internal_data.h  client_stub.cc  client_stub.h  coordinator.cc  document.h  meta_cache.cc  meta_cache.h  meta_member_info.cc  meta_member_info.h  region.cc  region.h  region_creator_internal_data.h  region_scanner.h  sdk_version.cc  sdk_version.h  slice.cc  status.cc  status.h  types_util.h  vector.h  version.cc
src/sdk/codec/: constant.h  document_codec.h  vector_codec.h
src/sdk/common/: common.h  helper.h  logging.h  param_config.cc  param_config.h  rand.cc  rand.h  tracker.h
src/sdk/document/: document_add_task.cc  document_add_task.h  document_batch_query_task.cc  document_batch_query_task.h  document_client.cc  document_codec.h  document_count_task.cc  document_count_task.h  document_delete_task.cc  document_delete_task.h  document_doc_value_internal.h  document_get_auto_increment_id_task.cc  document_get_auto_increment_id_task.h  document_get_border_task.cc  document_get_border_task.h  document_get_index_metrics_task.cc  document_get_index_metrics_task.h  document_helper.h  document_index.cc  document_index.h  document_index_cache.cc  document_index_cache.h  document_index_creator.cc  document_index_creator_internal_data.h  document_param.cc  document_scan_query_task.cc  document_scan_query_task.h  document_search_all_task.cc  document_search_all_task.h  document_search_task.cc  document_search_task.h  document_task.cc  document_task.h  document_translater.h  document_update_auto_increment_task.cc  document_update_auto_increment_task.h  document_update_task.cc  document_update_task.h
src/sdk/expression/: coding.cc  coding.h  langchain_expr.h  langchain_expr_encoder.cc  langchain_expr_encoder.h  langchain_expr_factory.cc  langchain_expr_factory.h  langchain_expr_visitor.h
src/sdk/rawkv/: raw_kv_batch_compare_and_set_task.cc  raw_kv_batch_compare_and_set_task.h  raw_kv_batch_delete_task.cc  raw_kv_batch_delete_task.h  raw_kv_batch_get_task.cc  raw_kv_batch_get_task.h  raw_kv_batch_put_if_absent_task.cc  raw_kv_batch_put_if_absent_task.h  raw_kv_batch_put_task.cc  raw_kv_batch_put_task.h  raw_kv_compare_and_set_task.cc  raw_kv_compare_and_set_task.h  raw_kv_delete_range_task.cc  raw_kv_delete_range_task.h  raw_kv_delete_task.cc  raw_kv_delete_task.h  raw_kv_get_task.cc  raw_kv_internal_data.h  raw_kv_put_if_absent_task.cc  raw_kv_put_task.cc  raw_kv_region_scanner_impl.cc  raw_kv_region_scanner_impl.h  raw_kv_scan_task.cc  raw_kv_scan_task.h  raw_kv_task.cc  raw_kv_task.h
src/sdk/rpc/: coordinator_rpc_controller.cc  coordinator_rpc_controller.h  document_service_rpc.h  rpc.h  rpc_client.h  store_rpc.h  store_rpc_controller.cc  store_rpc_controller.h  version_rpc.h
src/sdk/transaction/: tso.cc  tso.h  txn_buffer.cc  txn_buffer.h  txn_common.h  txn_impl.cc  txn_impl.h  txn_internal_data.h  txn_lock_resolver.cc  txn_lock_resolver.h  txn_manager.cc  txn_manager.h  txn_region_scanner_impl.cc  txn_region_scanner_impl.h
src/sdk/utils/: async_util.h  callback.h  codec.h  mutex_lock.h  net_util.h  rw_lock.h  scoped_cleanup.h  thread_pool.h  thread_pool_actuator.cc  thread_pool_actuator.h  thread_pool_impl.h
src/sdk/vector/: vector_add_task.cc  vector_add_task.h  vector_batch_query_task.cc  vector_batch_query_task.h  vector_client.cc  vector_codec.h  vector_common.h  vector_count_task.cc  vector_count_task.h  vector_delete_task.cc  vector_delete_task.h  vector_get_auto_increment_id_task.cc  vector_get_auto_increment_id_task.h  vector_get_border_task.cc  vector_get_border_task.h  vector_get_index_metrics_task.cc  vector_get_index_metrics_task.h  vector_helper.h  vector_index.cc  vector_index.h  vector_index_cache.cc  vector_index_cache.h  vector_index_creator.cc  vector_index_creator_internal_data.h  vector_param.cc  vector_scan_query_task.cc  vector_scan_query_task.h  vector_search_task.cc  vector_search_task.h  vector_task.cc  vector_task.h  vector_update_auto_increment_task.cc  vector_update_auto_increment_task.h  vector_update_task.cc  vector_update_task.h  vector_upsert_task.cc  vector_upsert_task.h
test/integration_test/: CMakeLists.txt  engine_type.h  environment.h  helper.h  main.cc  test_kvget.cc  test_kvput.cc  test_kvputifabsent.cc  test_kvscan.cc  test_txn.cc  test_txn_1PC.cc  test_txn_2PC.cc
test/integration_test/common/: helper.cc  helper.h  uuid.h
test/integration_test/report/: allure.cc  allure.h  web.h
test/unit_test/sdk/: CMakeLists.txt  main.cc  mock_client_stub.h  mock_region_scanner.h  test_auto_increment_manager.cc  test_base.h  test_common.h  test_coordinator_rpc_controller.cc  test_meta_cache.cc  test_region.cc  test_store_rpc_controller.cc  test_thread_pool_actuator.cc  tsan_suppressions.txt
(+111 files in other folders)
