[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.30.1",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = "setup.py"
python_version = "3.7"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
]
testpaths = ["tests"]

[tool.cibuildwheel]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"
build = "*-manylinux*"
skip = "*-musllinux*"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64"


# Install system library
[tool.cibuildwheel.linux]
before-all = [
  "dnf install -y wget tar git gcc-toolset-13* perl flex bison patch autoconf automake libtool python3-pip",
  "dnf remove -y cmake",
  "wget https://github.com/Kitware/CMake/releases/download/v3.30.1/cmake-3.30.1-linux-x86_64.tar.gz",
  "tar zxvf cmake-3.30.1-linux-x86_64.tar.gz",
  "mv cmake-3.30.1-linux-x86_64 /opt/cmake-3.30.1 && export PATH=/opt/cmake-3.30.1/bin:$PATH",
  "dnf --enablerepo=crb install -y meson ninja-build",
  "source /opt/rh/gcc-toolset-13/enable",
  "git clone https://github.com/dingodb/dingo-eureka.git",
  "cd dingo-eureka",
  "git submodule sync --recursive",
  "git submodule update --init --recursive",
  "mkdir build && cd build",
  "cmake -DINSTALL_PATH=/root/.local/dingo-eureka -DCMAKE_BUILD_TYPE=Release ..",
  "ulimit -n 65535",
  "make -j3",
]
archs = ["x86_64"]

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
extend-select = [
  "B",    # flake8-bugbear
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "UP",   # pyupgrade
]

[tool.myproject.settings]
build_directory = "build"