[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "dingosdk"
version = "0.3rc1.post9"
description = "dingo-store python sdk"
authors = [{name = "DingoDB", email = "dingodb@zetyun.com"}]
readme = "python/README.md"
requires-python = ">=3.9"

[tool.scikit-build.wheel]
exclude = ["lib/**", "include/**"]

[tool.scikit-build.cmake.define]
BUILD_PYTHON_SDK = "ON"
SDK_ENABLE_GRPC = "OFF"
BUILD_BENCHMARK = "OFF"
BUILD_INTEGRATION_TESTS = "OFF"
BUILD_UNIT_TESTS = "OFF"
BUILD_SDK_EXAMPLE = "OFF"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
]
testpaths = ["tests"]

[tool.cibuildwheel]
before-build = "rm -rf {project}/build"
build = "*-manylinux*"
skip = "*-musllinux*"
manylinux-x86_64-image = "dingodatabase/dingo-eureka:manylinux_2_34"

[tool.cibuildwheel.linux]
before-all = [
]
archs = ["x86_64"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-select = [
  "B",    # flake8-bugbear
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "UP",   # pyupgrade
]
